# luau-bench

./: .gitignore  LICENSE  README.md  pyproject.toml
examples/: config-ollama.toml
luau_bench/: cache.py  cli.py  evaluator.py  stats.py
luau_bench/analysis/: static.py
luau_bench/api/: __init__.py  filters.py  metrics.py  task.py
luau_bench/models/: __init__.py  anthropic_adapter.py  ollama_adapter.py  openai_compat.py
luau_bench/reporting/: html_report.py  reporter.py
luau_bench/runtime/: executor.py  stylua.py
luau_bench/tasks/: __init__.py
tasks/: README.md
tasks/luau_coding/: README.md  luau_coding.jsonl  luau_coding.yaml
tasks/std_trivia/: README.md  easy.jsonl  std_trivia.yaml  std_trivia_easy.yaml
templates/: group_example.yaml  task_basic.yaml  task_jsonl.yaml  task_loglikelihood.yaml  task_oop.yaml  task_qa.yaml  task_typing.yaml
tests/: test_analysis.py  test_evaluator.py  test_registry.py  test_reporter.py  test_tasks.py
tools/: install-runtime.sh
